--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RAKESH Electronics - Expert Electronic Repair & Premium Appliances</title>
-    <meta name="description" content="Professional electronic repair services and premium fans, electrical appliances in Mumbai. Fast turnaround, quality guarantee, expert technicians. Book repair service today!" />
-    <meta name="keywords" content="electronic repair, fan repair, electrical appliances, Mumbai electronics, device repair, mobile repair, laptop service, TV repair, ceiling fans, table fans" />
+    <meta name="description" content="Professional electronic repair services and premium fans, electrical appliances in Jalesar. Fast turnaround, quality guarantee, expert technicians. Book repair service today!" />
+    <meta name="keywords" content="electronic repair, fan repair, electrical appliances, Jalesar electronics, device repair, mobile repair, laptop service, TV repair, ceiling fans, table fans" />
     <meta name="author" content="RAKESH Electronics" />
 
     <meta property="og:title" content="RAKESH Electronics - Expert Electronic Repair & Premium Appliances" />
-    <meta property="og:description" content="Professional electronic repair services and premium fans, electrical appliances in Mumbai. Fast turnaround, quality guarantee, expert technicians." />
+    <meta property="og:description" content="Professional electronic repair services and premium fans, electrical appliances in Jalesar. Fast turnaround, quality guarantee, expert technicians." />
     <meta property="og:type" content="business.business" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     <meta property="og:url" content="https://RAKESHelectronics.com" />
@@ -17,7 +17,7 @@
     
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="RAKESH Electronics - Expert Electronic Repair" />
-    <meta name="twitter:description" content="Professional electronic repair services and premium appliances in Mumbai" />
+    <meta name="twitter:description" content="Professional electronic repair services and premium appliances in Jalesar" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <!-- Local Business Schema -->
@@ -30,7 +30,7 @@
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "123 Electronics Street, Tech Plaza, 2nd Floor",
-        "addressLocality": "Mumbai",
+        "addressLocality": "Jalesar",
         "addressRegion": "Maharashtra",
         "postalCode": "400001",
         "addressCountry": "IN"
