all changes occurs

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       },
       "service": [
         "Electronic Device Repair",
-        "Mobile Phone Repair", 
+        "Mixer Repairing", 
         "Laptop Repair",
         "TV Repair",
         "Fan Installation",
